--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crying girl</title>
 </head>
-<body>
+<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+    <div style="background-color: #F4F4F4;">
+        <img style="float: left;" src="./girl.jpg" alt="crying girl picture">
+        <span style="float: right">
+            <p style="font-size: xx-large;">Awww... Don't Cry.</p>
+            <p>It's just a 404 Error!</p>
+            <p>What you're looking for may have been misplaced in Long Term Memory.</p>
+        </span>
+    </div>
     
 </body>
 </html>
