--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crying girl</title>
 </head>
-<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-    <div style="background-color: #F4F4F4;">
-        <img style="float: left;" src="./girl.jpg" alt="crying girl picture">
-        <span style="float: right">
-            <p style="font-size: xx-large;">Awww... Don't Cry.</p>
-            <p>It's just a 404 Error!</p>
-            <p>What you're looking for may have been misplaced in Long Term Memory.</p>
-        </span>
-    </div>
-    
-</body>
+    <body style="background-color: #eaebed; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+        <main style="#">
+            <img style="height: 500px; float: right; margin-right: 15%; margin-top: 5%;" src="./girl.jpg" alt="girl crying">
+            <div style="size:49%; float: left; text-align: center; margin-top: 15%; margin-left: 10%;">
+                <h1 style="#">Awww... Don't Cry.</h1>
+                <p style="#">It's just a 404 Error!</p>
+                <p style="#">What you're looking for may have been misplaced in Long Term Memory.</p>
+                <a style="background-color: blue; color: whitesmoke; padding: 5px;" href="#">BACK HOME</a>
+            </div>
+        </main>
+    </body>
+
 </html>
