--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
     <body style="background-color: #eaebed; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
         <main style="#">
-            <img style="height: 500px; float: right; margin-right: 15%; margin-top: 5%;" src="./girl.jpg" alt="girl crying">
-            <div style="size:49%; float: left; text-align: center; margin-top: 15%; margin-left: 10%;">
-                <h1 style="#">Awww... Don't Cry.</h1>
-                <p style="#">It's just a 404 Error!</p>
-                <p style="#">What you're looking for may have been misplaced in Long Term Memory.</p>
-                <a style="background-color: blue; color: whitesmoke; padding: 5px;" href="#">BACK HOME</a>
+            <img style="height: 40%; float: right; margin-right: 15%; margin-top: 5%;" src="./girl.jpg" alt="girl crying">
+            <div style="float: left; text-align: center; margin-top: 15%; margin-left: 10%;">
+                <h1 style="#;">Awwwwww... Don't Cry.</h1>
+                <p style="margin:0;">It's just a 404 Error!</p>
+                <p style="margin-top:0;">What you're looking for may have been misplaced in Long Term Memory.</p>
+                <a style="background-color: blue; color: whitesmoke; padding: 15px; text-decoration: none;" href="#">BACK HOME</a>
             </div>
         </main>
     </body>
