--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Crying girl</title>
 </head>
     <body style="background-color: #eaebed; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-        <main style="#">
-            <img style="height: 40%; float: right; margin-right: 15%; margin-top: 5%;" src="./girl.jpg" alt="girl crying">
+        <main>
+            <img style="float: right; margin-right: 15%; margin-top: 2%;" src="./girl.jpg" alt="girl crying">
             <div style="float: left; text-align: center; margin-top: 15%; margin-left: 10%;">
-                <h1 style="#;">Awwwwww... Don't Cry.</h1>
-                <p style="margin:0;">It's just a 404 Error!</p>
+                <h1 style="outline: 2px;">Awwwwww... Don't Cry.</h1>
+                <p style="margin:8px;">It's just a 404 Error!</p>
                 <p style="margin-top:0;">What you're looking for may have been misplaced in Long Term Memory.</p>
-                <a style="background-color: blue; color: whitesmoke; padding: 15px; text-decoration: none;" href="#">BACK HOME</a>
+                <a style="display: inline-block; background-color: blue; color: whitesmoke; padding: 20px; text-decoration: none;" href="#">BACK HOME</a>
             </div>
         </main>
     </body>
